Migrated vertex id to int.